--- a/library.css
+++ b/library.css
@@ -1,9 +1,11 @@
 .library-container {
     text-align: center;
     padding: 30px;
-    margin-top: 40px;
+    margin-top: 100px;
 }
-
+.library-container h2{
+    color: #1E3A8A;
+}
 .library-box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
