--- a/UserRegistration.css
+++ b/UserRegistration.css
@@ -25,7 +25,6 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 50px 35px;
-    position: fixed;
     top: 0;
     left: 0;
     height:80px;
@@ -66,6 +65,14 @@ nav ul li:hover {
     background:rgba(255, 255, 255, 0.2);
     padding:5px;
 }
+.hamburger {
+    display: none;
+    cursor: pointer;
+}
+
+.hamburger img {
+    width: 40px;
+}
 
 /* Registration Form Container */
 .register-container {
@@ -75,7 +82,7 @@ nav ul li:hover {
     align-items: center;
     width: 100%;
     flex-direction: column;
-    margin-top: 80px;
+    margin-top: 10px;
 }
 .message {
     position: absolute;
@@ -88,7 +95,7 @@ nav ul li:hover {
     color: #FF0000;    
     text-align: center;
     text-transform: capitalize;
-    z-index:1000;
+    z-index:200;
     font-weight: 700;
 }
 
@@ -101,8 +108,6 @@ nav ul li:hover {
     text-align: center;
     transition: 0.3s ease-in-out;
     height:auto;
-    position: fixed;
-    
 }
 
 /* Form Heading */
@@ -181,11 +186,6 @@ footer {
 
 /*Responsive Design */
 @media (max-width: 768px) {
-    .register-container {
-        width: 90%;
-        padding: 20px;
-    }
-
     h2 {
         font-size: 20px;
     }
@@ -196,5 +196,36 @@ footer {
 
     nav ul li a {
         font-size: 13px;
+    }
+    nav {
+        display: none; /* Hide menu initially */
+        position: absolute;
+        top: 60px;
+        right: 0;
+        background: #1E3A8A;
+        width: 200px;
+        text-align: left;
+        padding: 10px;
+        border-radius: 5px;
+        z-index: 1000; 
+    }
+
+    nav ul {
+        display: block;
+        padding: 0;
+    }
+
+    nav ul li {
+        margin: 10px 0;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        z-index: 1001;
+    }
+    .register-container {
+        width: 40%;
+        padding: 20px;
     }
 }
