--- a/course.css
+++ b/course.css
@@ -27,7 +27,7 @@ header {
 
 /* Logo */
 .logo img {
-    height: 100px;
+    height: 250px;
     width: auto;
 }
 
@@ -52,6 +52,11 @@ nav ul li a {
 
 nav ul li a:hover {
     color: #ffcc00;
+}
+#menu-btn {
+    width: 35px;
+    cursor: pointer;
+    display: none; /* Hidden by default */
 }
 
 /* Search Bar */
@@ -139,7 +144,7 @@ nav ul li a:hover {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     transition: transform 0.3s ease;
-    height: 450px;
+    height: 500px;
     
 }
 
@@ -222,21 +227,65 @@ footer {
 /* Responsive */
 @media (max-width: 768px) {
     header {
-        flex-direction: column;
-        height: auto;
-        padding: 10px 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .search-container {
+        width:55%;
+    }
+    .logo{
+        width:22%;
+        margin-left:-20px;
+    }
+    .menu-btn{
+        width:22%; 
+    }
+    
+    .search-container input{
+        width:100%; 
+        height:20px;
+        font-size: 10px;
+        font-weight: bold;
+    }
+    .search-container button{
+        display:none;
     }
 
-    .search-container {
-        width: 100%;
-        margin-top: 10px;
+    nav {
+        display: none;
+        position: absolute;
+        top: 80px;
+        right: 0;
+        background:#1E3A8A;
+        width: 200px;
+        border-radius: 5px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     }
 
     nav ul {
         flex-direction: column;
-        align-items: center;
+        padding: 10px;
     }
 
+    nav ul li {
+        padding: 10px;
+        color: #fff;
+    }
+    nav ul li a:hover {
+        color: #ffcc00;
+    }
+    .logo img{
+        width:80px;
+        height:100px;
+    }
+
+    /* Show Hamburger */
+    #menu-btn {
+        display: block;
+        width: 24px;
+    }
     .course-list {
         flex-direction: column;
         align-items: center;
